--- a/src/app/pages/projects/areas/areas.component.html
+++ b/src/app/pages/projects/areas/areas.component.html
@@ -31,7 +31,7 @@
                             <div class="d-flex justify-content-sm-end">
                                 <div class="search-box ms-2">
                                     <input type="text" class="form-control" style="width: 300px;" placeholder="Buscar..."
-                                        [(ngModel)]="service.searchTerm"><!--search-->
+                                    [(ngModel)]="filtro" (ngModelChange)="aplicarFiltro()"><!--service.searchTerm  search-->
                                     <i class="ri-search-line search-icon"></i>
                                 </div>
                                 
