--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -105,6 +105,18 @@
                               
                             </ng-container>
                             
+                            <ng-container matColumnDef="area_principal">
+                                
+                                <th class="th-center" mat-header-cell *matHeaderCellDef> 
+                                  <span> Area Principal </span>
+                                </th>
+                              
+                                <td mat-cell *matCellDef="let data">
+                                  <ngb-highlight [result]="data.area_principal"></ngb-highlight>
+                                </td>
+                                
+                            </ng-container>
+
                             <ng-container matColumnDef="area">
                                 
                                 <th class="th-center" mat-header-cell *matHeaderCellDef> 
