ajuste palabra homologacion y activar crear usuario admin

--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -160,12 +160,12 @@
       <div class="modal-body text-center">
         <lord-icon src="https://cdn.lordicon.com/tdrtiskw.json" trigger="loop" colors="primary:#f06548,secondary:#f7b84b" style="width:120px;height:120px"></lord-icon>
         <div class="mt-4 pt-2 fs-15 ">
-            <h4>¿Está segur@ que desea realizar la homologación?</h4>
+            <h4>¿Está segur@ que desea realizar la actualización del item?</h4>
             <p class="text-muted mx-4 mb-0">Esta acción no se puede deshacer</p>
         </div>
         <div class="d-flex align-items-start gap-2 mt-4 mb-2"><!--justify-content-center-->
                 <button type="button" class="swal2-cancel btn btn-danger w-xs mb-1 previestab" aria-label="" style="display: inline-block;" (click)="modal.close('Close click')">Cancelar</button>
-                <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1 right ms-auto nexttab" aria-label="" style="display: inline-block;" (click)="saveHomologar(homoProgressContent, homoSuccessContent)">Homologar</button>
+                <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1 right ms-auto nexttab" aria-label="" style="display: inline-block;" (click)="saveHomologar(homoProgressContent, homoSuccessContent)">Actualizar</button>
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
       <div class="modal-body text-center">
         <lord-icon src="https://cdn.lordicon.com/tdrtiskw.json" trigger="loop" colors="primary:#f06548,secondary:#f7b84b" style="width:120px;height:120px"></lord-icon>
         <div class="mt-4 pt-2 fs-15 ">
-            <h4>Realizando homologación del elemento...</h4>
+            <h4>Realizando actualización del elemento...</h4>
             <p class="text-muted mx-4 mb-0">Podras ver los cambios en la siguiente etapa de Seguimiento y Control</p>
         </div>
       </div>
@@ -191,7 +191,7 @@
       <div class="modal-body text-center">
         <lord-icon src="https://cdn.lordicon.com/lupuorrc.json" trigger="loop" colors="primary:#0ab39c,secondary:#405189" style="width:120px;height:120px"></lord-icon>
         <div class="mt-4 pt-2 fs-15">
-            <h4>Homologación Completa!</h4>
+            <h4>Actualización Completa!</h4>
         </div>
         <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
             <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1" aria-label="" style="display: inline-block;" (click)="modal.close('Close click')">Salir</button>
